# how2use

./: .gitignore  Dockerfile  README.md  config.toml  config.toml.example  pyproject.toml
app/: cache.py  main.py
app/api/: routes.py
app/clients/: gpt2api_client.py  grok2api_client.py  new_api_client.py  sub2api_client.py
app/core/: auth.py  config.py  http_client.py  logger.py
app/providers/: __init__.py  base.py  gpt2api.py  grok2api.py  nim.py  sub2api.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_grok_client.py  test_grok_provider.py  test_new_api_client.py  test_nim_provider.py  test_routes.py
